Remove ipmctl for ARM compatibility

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -14,20 +14,12 @@ RUN export DBG="-g -Wall" && \
   make -e -C libpfm-4.11.0 && \
   make install -C libpfm-4.11.0
 
-RUN git clone -b v02.00.00.3820 https://github.com/intel/ipmctl/ && \
-    cd ipmctl && \
-    mkdir output && \
-    cd output && \
-    cmake -DRELEASE=ON -DCMAKE_INSTALL_PREFIX=/ -DCMAKE_INSTALL_LIBDIR=/usr/local/lib .. && \
-    make -j all && \
-    make install
-
 ADD . /go/src/github.com/google/cadvisor
 WORKDIR /go/src/github.com/google/cadvisor
 
 ENV GOROOT /usr/lib/go
 ENV GOPATH /go
-ENV GO_FLAGS="-tags=libpfm,netgo,libipmctl"
+ENV GO_FLAGS="-tags=libpfm,netgo"
 
 RUN ./build/build.sh
 
@@ -41,7 +33,6 @@ RUN apk --no-cache add libc6-compat device-mapper findutils zfs ndctl && \
 
 # Grab cadvisor,libpfm4 and libipmctl from "build" container.
 COPY --from=build /usr/local/lib/libpfm.so* /usr/local/lib/
-COPY --from=build /usr/local/lib/libipmctl.so* /usr/local/lib/
 COPY --from=build /go/src/github.com/google/cadvisor/cadvisor /usr/bin/cadvisor
 
 EXPOSE 8080
